--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,33 @@
 name: "SimpleMarkdownAction"
-on: 
-    schedule:
-      - cron: 0 9 * * 6
-    workflow_dispatch:
+
+on:
+  workflow_dispatch:
+  push:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: SimpleMarkdownAction
-        uses: ./
-        with:
-          directory: "templates"
-          template: "contents.md"
-          output: "README.md"
-          title: "Awesome List"
+    - name: Check out code
+      uses: actions/checkout@v2
+      with:
+        path: "SimpleMarkdownAction"
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Test with act
+      uses: actions/checkout@v2 # Reuse the checkout action for act
+      with:
+        ref: ${{ github.event.pull_request.head.sha }} # Use the pull request head sha for act testing
+
+    - name: Run tests with act
+      run: npm test
+
+
